v1.1.0 - BRC Integration (#35)
* all characters

* character routes

* songs

* locations

* collectibles

* add docs

* fix

* adjust text

* node version

* modify readme

* v1.1.0

---------
