# src/routes/characterRouter.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { getAllCharacters, getJSRCharacters, getJSRFCharacters, getJSRCharacterById, getJSRFCharacterById } from '../controllers/characterController.js';
+import { getAllCharacters, getJSRCharacters, getJSRFCharacters, getJSRCharacterById, getJSRFCharacterById, getBRCCharacters, getBRCCharacterById } from '../controllers/characterController.js';
 
 
 const characters = express.Router();
@@ -9,5 +9,7 @@ characters.get('/jsr', async (req, res) => /* #swagger.tags = ['Characters'] */ 
 characters.get('/jsr/:id', async (req, res) => /* #swagger.tags = ['Characters'] */ await getJSRCharacterById(req, res));
 characters.get('/jsrf', async (req, res) => /* #swagger.tags = ['Characters'] */ await getJSRFCharacters(req, res));
 characters.get('/jsrf/:id', async (req, res) => /* #swagger.tags = ['Characters'] */ await getJSRFCharacterById(req, res));
+characters.get('/brc', async (req, res) => /* #swagger.tags = ['Characters'] */ await getBRCCharacters(req, res));
+characters.get('/brc/:id', async (req, res) => /* #swagger.tags = ['Characters'] */ await getBRCCharacterById(req, res));
 
 export default characters;
