# src/routes/locationRouter.js
@@ -5,6 +5,8 @@ import {
   getJSRFLocations, 
   getJSRLocationById, 
   getJSRFLocationById,
+  getBRCLocations,
+  getBRCLocationById
 } from '../controllers/locationController.js';
 
 export const locations = express.Router();
@@ -14,5 +16,7 @@ locations.get('/jsr', async (req, res) => /* #swagger.tags = ['Locations'] */ aw
 locations.get('/jsr/:id', async (req, res) => /* #swagger.tags = ['Locations'] */ await getJSRLocationById(req, res));
 locations.get('/jsrf', async (req, res) => /* #swagger.tags = ['Locations'] */ await getJSRFLocations(req, res));
 locations.get('/jsrf/:id', async (req, res) => /* #swagger.tags = ['Locations'] */ await getJSRFLocationById(req, res));
+locations.get('/brc', async (req, res) => /* #swagger.tags = ['Locations'] */ await getBRCLocations(req, res));
+locations.get('/brc/:id', async (req, res) => /* #swagger.tags = ['Locations'] */ await getBRCLocationById(req, res));
 
 export default locations;
